--- a/templates/class_settings.html
+++ b/templates/class_settings.html
@@ -13,7 +13,7 @@
         <input type="submit" value="Uložit"/>
     </form>
 </div>
-<p>Po přidání třídy bude pravděpodobně pár dní trvat, než začnete dostávat upozornění. Několikrát za den dojde ke
+<p>Po přidání třídy bude pravděpodobně pár dní trvat, než začnete dostávat upozornění. Několikrát za den
     se zkontroluje vypsané suplování a odešle se pouze nově připsané/upravené. <br/> Pokud v době přidání již suplování
     bylo vypsáno, nepřijde vám dokud se nezmění nebo dokud nepřibyde nové.</p>
 {% endblock %}
